# mog-xltpl

./: README.md  README_EN.md  README_JA.md  example.xlsx  pyproject.toml  setup.py  static_image.xlsm
examples/: box.xlsx  example.xlsx  filter.xlsx  link.xlsx  result00.xls  result00.xlsx  result01.xls  result01.xlsx  sample_image_template.xlsx  sample_invoice.xlsx  sample_list_template.xlsx  static_image_2_temp.xlsx
tests/: test_box.py
tests/artifacts/: static_image_2_rendered.xlsx
xltpl/: cli.py
